apps/shinobi-main/template/service.yaml
kind: Service
apiVersion: v1
metadata:
  creationTimestamp: null
  labels:
    app: shinobi-main
  name: shinobi-main
  annotations:
    metallb.universe.tf/address-pool: private
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: shinobi-main
