apps/shinobi-main/template/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  labels:
    app: shinobi-main
  name: shinobi-main
  annotations:
    kubernetes.io/ingress.class: traefik
    # traefik.ingress.kubernetes.io/router.tls: "true"
    # traefik.ingress.kubernetes.io/router.entrypoints: https
    cert-manager.io/cluster-issuer: cloudflare
spec:
  # tls:
  # - hosts:
  #   - hikvisionserver.picturo.us
  #   secretName: streamie-tls
  rules:
    - host: hikvisionserver.picturo.us
      http:
        paths:
          - backend:
              service:
                name: shinobi-main
                port:
                  number: 8080
            path: /
            pathType: Prefix
